# model-benchmarking

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  CONTEXT_PROMPT.md  README.md  RUNBOOK.md  audit_results.py  benchmark_comparison.ipynb  functional-v1-hy3.yaml  functional-v1-issue-75.yaml  functional-v1-manifest.yaml  functional-v1-mimo-v2.5.yaml  functional-v1-minimax-m3.yaml  gen_form_data.py  gen_plantilla.py  generate_fair_comparison.py  harbor-agent-install.yaml  harbor-functional-v1.yaml  merge_metrics.py  openrouter_key.txt.example  poc_harness.py  prepare_workdir_cache.py  presentacion.html  pyproject.toml  rescore_results.py  run_all.py  run_angular.py  run_benchmark.py  run_data.py  run_data_feat1only.py  run_react.py  run_springboot.py  test_env_fallbacks.py  test_slugs.py
benchmark/: __init__.py  checks.py  models.py  prompts.py  runner.py  tasks.py  util.py  workdir.py
blueprint/: benchmark-architecture-and-reuse-boundary.md  final-validation-and-implementation-handoff.md  generated-benchmark-report.md  harness-adapter-and-launch-contract.md  hermetic-execution-and-integrity.md  initial-scenario-portfolio.md  run-ledger-and-provenance-schema.md  (+3 more)
proofs/harbor-submission-capture/: README.md  pyproject.toml
proofs/harbor-submission-capture/artifacts/: proof-report.json  sha256sums.txt
proofs/harbor-submission-capture/artifacts/cases/: malicious-path.json  missing-capture.json  no-op.json  normal-patch.json  oversized.json  racing-descendant.json  special-file.json  symlink.json
proofs/harbor-submission-capture/fixtures/task/: instruction.md  task.toml
proofs/harbor-submission-capture/fixtures/task/environment/: Dockerfile  docker-compose.yaml
proofs/harbor-submission-capture/fixtures/task/environment/capture/: Dockerfile  capture.py  policy.json
proofs/harbor-submission-capture/fixtures/task/solution/: solve.sh
proofs/harbor-submission-capture/fixtures/task/tests/: Dockerfile  expected.json  test.sh  verify_handoff.py
proofs/harbor-submission-capture/tests/: conftest.py  test_artifact_writer.py  test_capture_contracts.py  test_harbor_capture.py  test_pins_and_seam.py
(+530 files in other folders)
