[project]
name = "model-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
]
