[project]
name = "harbor-submission-capture-proof"
version = "0.1.0"
description = "Real-Docker proof of Harbor's post-stop trusted submission capture seam"
requires-python = "==3.12.*"
dependencies = [
  "harbor @ git+https://github.com/harbor-framework/harbor.git@527d50deb63a5d279e8c20593c18a2cbc7f61f9e",
  "pytest==8.4.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
